# matrix-digital-clock

./: .gitignore  .gitmodules  README  README.md
fw/: CMakeLists.txt  halconf.h  map.mm
fw/advanced_version/: CMakeLists.txt  Makefile  chconf.h  main.cpp  mcuconf.h  platform.h
fw/advanced_version/dcf/: dcf.c
fw/advanced_version/flash/: stm32f10x_flash.h
fw/advanced_version/fonts/: passert.h  terminus12_bold.c  terminus16_bold.c
fw/advanced_version/matrix_driver/: matrix_abstraction.cpp  matrix_abstraction.h  matrix_driver.c  matrix_driver.h
fw/advanced_version/menu/: configuration.c  configuration.h  menu.cpp  menu.h  print.cpp  print.h  screens.cpp  screens.h
fw/advanced_version/rtc/: rtc_control.c  rtc_control.h
fw/advanced_version/wifi/: wifi.c  wifi.cpp  wifi.h
fw/flash/: stm32f10x_flash.c
fw/matrix_digital_clock/: Makefile  chconf.h  halconf.h  main.cpp  mcuconf.h  platform.h
fw/matrix_digital_clock/board_f100/: board.h
fw/matrix_digital_clock/dcf/: dcf.c  dcf.h
fw/matrix_digital_clock/matrix_driver/: matrix_abstraction.c  matrix_abstraction.h  matrix_driver.c  matrix_driver.h
fw/matrix_digital_clock/wireless/: wireless.cpp  wireless.h
fw/menu/: configuration.c  crc8.c  menu.cpp  print.cpp  screens.h
fw/version1/: Makefile  platform.h
fw/version1/matrix_driver/: matrix_abstraction.c  matrix_abstraction.h  matrix_driver.c  matrix_driver.h
fw/version2/: CMakeLists.txt
fw/version2/matrix_driver/: matrix_abstraction.cpp  matrix_abstraction.h
fw/version2/menu/: screens.cpp
fw/version2/rtc/: rtc_control.h
fw/version2/wifi/: wifi.h
hw/: matrix.brd  matrix.sch
hw/control_board/: shift_regs.brd  shift_regs.sch
hw/gerbers/: matrix2.dri  matrix2.gpi
hw/matrix/: matrix2.brd  matrix2.sch
hw/matrix/gerbers/: matrix2.GBL  matrix2.GBP  matrix2.GBS  matrix2.GTL  matrix2.GTO  matrix2.GTS  matrix2.TXT  matrix2.do
hw/shift_regs/: shift_regs.brd  shift_regs.sch
hw/shift_regs_v1.1/: shift_regs.sch
hw/version1/: shift_regs.brd  shift_regs.sch
hw/version1.1/: shift_regs.brd
hw/version2.0/: shift_regs.brd  shift_regs.sch
